--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,11 @@
      </dependency>
      
      <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+     </dependency>
+     
+     <dependency>
  		<groupId>mysql</groupId>
  		<artifactId>mysql-connector-java</artifactId>
 	</dependency>
@@ -44,8 +49,58 @@
   		<scope>test</scope>
  	</dependency>
 
-	
-    
- 
+
+
+
+	<dependency>
+		<groupId>io.crnk</groupId>
+		<artifactId>crnk-client</artifactId>
+		<version>2.8.20180718034955</version>
+	</dependency>
+	<dependency>
+		<groupId>io.crnk</groupId>
+		<artifactId>crnk-core</artifactId>
+		<version>2.8.20180718034955</version>
+	</dependency>
+	<dependency>
+		<groupId>io.crnk</groupId>
+		<artifactId>crnk-home</artifactId>
+		<version>2.8.20180718034955</version>
+	</dependency>
+	<dependency>
+		<groupId>io.crnk</groupId>
+		<artifactId>crnk-jpa</artifactId>
+		<version>2.8.20180718034955</version>
+	</dependency>
+	<dependency>
+		<groupId>io.crnk</groupId>
+		<artifactId>crnk-meta</artifactId>
+		<version>2.8.20180718034955</version>
+	</dependency>
+	<dependency>
+		<groupId>io.crnk</groupId>
+		<artifactId>crnk-operations</artifactId>
+		<version>2.8.20180718034955</version>
+	</dependency>
+	<dependency>
+		<groupId>io.crnk</groupId>
+		<artifactId>crnk-security</artifactId>
+		<version>2.8.20180718034955</version>
+	</dependency>
+	<dependency>
+		<groupId>io.crnk</groupId>
+		<artifactId>crnk-setup-spring-boot2</artifactId>
+		<version>2.8.20180718034955</version>
+	</dependency>
+	<dependency>
+		<groupId>io.crnk</groupId>
+		<artifactId>crnk-ui</artifactId>
+		<version>2.8.20180718034955</version>
+	</dependency>
+	<dependency>
+		<groupId>io.crnk</groupId>
+		<artifactId>crnk-validation</artifactId>
+		<version>2.8.20180718034955</version>
+	</dependency>
   </dependencies>
 </project>
