--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,14 @@ spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/academicdb
 spring.datasource.username=root
 spring.datasource.password=1234
+
+spring.security.user.name=admin
+spring.security.user.password=pepe
+
+crnk.enabled=true
+crnk.domain-name=http://localhost:8080
+crnk.path-prefix=/api
+crnk.default-page-limit=20
+crnk.max-page-limit=1000
+crnk.allow-unknown-attributes=false
+crnk.return404-on-null=true
