--- a/pom.xml
+++ b/pom.xml
@@ -31,12 +31,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
      </dependency>
-     
-     <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-     </dependency>
-     
+
      <dependency>
  		<groupId>mysql</groupId>
  		<artifactId>mysql-connector-java</artifactId>
@@ -50,57 +45,46 @@
  	</dependency>
 
 
+      <!-- https://mvnrepository.com/artifact/com.yahoo.elide/elide-core -->
+      <dependency>
+          <groupId>com.yahoo.elide</groupId>
+          <artifactId>elide-core</artifactId>
+          <version>1.0.0.19</version>
+      </dependency>
+      <!-- https://mvnrepository.com/artifact/com.yahoo.elide/elide-datastore-hibernate5 -->
+      <dependency>
+          <groupId>com.yahoo.elide</groupId>
+          <artifactId>elide-datastore-hibernate5</artifactId>
+          <version>1.0.0.19</version>
+      </dependency>
 
 
-	<dependency>
-		<groupId>io.crnk</groupId>
-		<artifactId>crnk-client</artifactId>
-		<version>2.8.20180718034955</version>
-	</dependency>
-	<dependency>
-		<groupId>io.crnk</groupId>
-		<artifactId>crnk-core</artifactId>
-		<version>2.8.20180718034955</version>
-	</dependency>
-	<dependency>
-		<groupId>io.crnk</groupId>
-		<artifactId>crnk-home</artifactId>
-		<version>2.8.20180718034955</version>
-	</dependency>
-	<dependency>
-		<groupId>io.crnk</groupId>
-		<artifactId>crnk-jpa</artifactId>
-		<version>2.8.20180718034955</version>
-	</dependency>
-	<dependency>
-		<groupId>io.crnk</groupId>
-		<artifactId>crnk-meta</artifactId>
-		<version>2.8.20180718034955</version>
-	</dependency>
-	<dependency>
-		<groupId>io.crnk</groupId>
-		<artifactId>crnk-operations</artifactId>
-		<version>2.8.20180718034955</version>
-	</dependency>
-	<dependency>
-		<groupId>io.crnk</groupId>
-		<artifactId>crnk-security</artifactId>
-		<version>2.8.20180718034955</version>
-	</dependency>
-	<dependency>
-		<groupId>io.crnk</groupId>
-		<artifactId>crnk-setup-spring-boot2</artifactId>
-		<version>2.8.20180718034955</version>
-	</dependency>
-	<dependency>
-		<groupId>io.crnk</groupId>
-		<artifactId>crnk-ui</artifactId>
-		<version>2.8.20180718034955</version>
-	</dependency>
-	<dependency>
-		<groupId>io.crnk</groupId>
-		<artifactId>crnk-validation</artifactId>
-		<version>2.8.20180718034955</version>
-	</dependency>
+
+      <!-- https://mvnrepository.com/artifact/com.yahoo.elide/elide-annotations -->
+        <dependency>
+            <groupId>com.yahoo.elide</groupId>
+            <artifactId>elide-annotations</artifactId>
+            <version>2.0.10</version>
+        </dependency>
+
+
+
+      <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-entitymanager -->
+      <dependency>
+          <groupId>org.hibernate</groupId>
+          <artifactId>hibernate-entitymanager</artifactId>
+          <version>5.0.7.Final</version>
+      </dependency>
+
+
+      <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+      <dependency>
+          <groupId>org.hibernate</groupId>
+          <artifactId>hibernate-core</artifactId>
+          <version>5.0.7.Final</version>
+      </dependency>
+
+
+
   </dependencies>
 </project>
