--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,7 @@
-spring.jpa.database=mysql
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/academicdb
 spring.datasource.username=root
 spring.datasource.password=1234
-
-spring.security.user.name=admin
-spring.security.user.password=pepe
-
-crnk.enabled=true
-crnk.domain-name=http://localhost:8080
-crnk.path-prefix=/api
-crnk.default-page-limit=20
-crnk.max-page-limit=1000
-crnk.allow-unknown-attributes=false
-crnk.return404-on-null=true
+spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
